# Feldtheorie

./: .gitignore  .zenodo.json  ACKNOWLEDGEMENTS.md  AGENTS.md  AGENTS_PLAIN.md  ARCHITECTURE.md  AUTHORSHIP.md  CHANGELOG.md  CITATION.cff  CLAUDE_V2_VALIDATION_REPORT.md  COMPILE_MANUSCRIPT.md  COMPILE_PDF_GUIDE.md  CONTRIBUTING.md  Dockerfile  ETHICS.md  EXECUTIVE_SUMMARY_SESSION.md  FINALISIERUNG_SESSION.md  FRAKTALLAUF_HOOK_PHASE2_META_REGRESSION_n21.md  FRAKTALLAUF_PHASE2_RESULTS.md  FRAKTALLAUF_PHASE3a_DIVERSITY_n31.md  FRAKTALLAUF_PHASE4_BETA_GAPS_n36.md  GITHUB_RELEASE_NOTES.md  LICENSE  LIMITATIONS.md  METHODS.md  METRICS.md  Makefile  NEWS.md  PR_VALIDATION_V2.0.6.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v2.0.0.md  REPRODUCE.md  SESSION_1_SUMMARY.md  SUBMISSION_ROADMAP.md  SUBMISSION_VALIDATION_REPORT.md  SigillinNetz und UTAC_Strukturierte Semantik.latex  ZENODO_DESCRIPTION_v1.1.md  (+14 more)
.claude/: README.md
Docs/: Diskurs_V1_Psyche_AI_koheränzen.txt  ReaktionAI-AeonundJoh.txt  Theorie- und Empirie-Abschnitte.md  Transdisziplinärer Schwellenfeld-Simulator--Claude.txt
analysis/: AGENTS.md  README.md  __init__.py  adaptive_membrane_phase_scan.py  adaptive_theta_plasticity_fit.py  adaptive_theta_typology.py  add_llm_systems_to_meta_regression.py  add_phase3_diversity_systems.py  add_phase4_beta_gap_systems.py  add_phase4_beta_values.py  amazon_resilience_fit.py  analysis_index.json  analysis_index.md  analysis_index.yaml  beta_drivers_meta_regression.py  beta_meta_regression_v2.py  beta_meta_regression_v2_field_types.py  beta_phi_scaling_test.py  beta_scaling_followup_analysis.py  beta_spiral_visualizer.py  bootstrap_sensitivity_analysis.py  climate_beta_extractor.py  coupled_field_threshold_fit.py  dynamic_threshold_lab.ipynb  fourier_analysis.py  honeybee_waggle_fit.py  implosion_fit_beta.py  (+35 more)
api/: Dockerfile  (+7 more)
(+968 files in other folders)
