[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "feldtheorie"
version = "0.1.0"
description = "Reproducibility harness for the Universal Threshold Field programme."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Universal Threshold Field Collective" }
]
keywords = ["logistic", "threshold-field", "resonance", "climate", "membrane"]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "black>=24.4",
  "mypy>=1.10",
  "nox>=2024.4.15",
  "pytest>=8.2",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
]
docs = [
  "myst-parser>=2.0",
  "sphinx>=7.3",
]

[project.scripts]
utf-batch = "analysis.resonance_batch_runner:main"
utf-planetary-summary = "analysis.planetary_tipping_elements_fit:main"
utf-resonance-cohort = "analysis.resonance_cohort_summary:main"

[tool.hatch.build.targets.wheel]
packages = ["analysis", "models"]
include = [
  "analysis/**/*.py",
  "models/**/*.py",
  "analysis/results/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
  "analysis",
  "models",
  "tests",
  "docs",
  "data",
  "diagrams",
  "simulator",
  "Docs",
  "codexfeedback.json",
  "codexfeedback.yaml",
  "codexfeedback.md",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["analysis", "models", "tests"]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["analysis", "models"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
